# chmdata

./: README.md  pyproject.toml  requirements.txt
src/chmdata/: __init__.py  agrimet.py  mesonet.py  met_utils.py  thredds.py
